<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/action_bar_height"
    android:gravity="center"
    android:background="@color/chelsea_cucumber"
    android:orientation="horizontal"
    android:padding="@dimen/padding_super_small">

    <Button
        android:id="@+id/btn_add_sub"
        style="@style/TabTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@mipmap/iv_add_sub_node"
        android:text="@string/tab_sub_node"/>

    <Button
        android:id="@+id/btn_add_node"
        style="@style/TabTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@mipmap/iv_add_node"
        android:text="@string/tab_node"/>

    <Button
        android:id="@+id/btn_focus_mid"
        style="@style/TabTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@mipmap/iv_front_view"
        android:text="@string/tab_front_view"/>

    <Button
        android:id="@+id/btn_code_mode"
        style="@style/TabTheme"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawableTop="@mipmap/iv_code_mode"
        android:text="@string/tab_code_mode"/>

    <!--control+shift+right/left进行Text和Design的切换-->

</LinearLayout>